<resources>
    <string name="app_name">PADC-3-F-HYM-Assignment4</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_sign_in_facebook">Sign In With <b>Facebook</b></string>
    <string name="lbl_sign_in_google">Sign In With <b>Google</b></string>
    <string name="lbl_sign_in_twitter">Sign In With <b>Twitter</b></string>
    <string name="lbl_sign_up_email"><b>Sign Up</b>\n<small>With Email</small></string>
    <string name="lbl_sign_in_email"><b>Sign In</b>\n<small>With Email</small></string>
    <string name="lbl_terms_and_conditions">Terms &amp; Conditions and Privacy Policy</string>
</resources>
